Modularize project. Include SM83 ssts as a sub-module in the repository